--- a/JorialandApp/JorialandApp.vcxproj
+++ b/JorialandApp/JorialandApp.vcxproj
@@ -89,6 +89,9 @@
   <ItemGroup>
     <ClCompile Include="JorialandApp.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="JorialandApp.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
